# ros2_course_project

./: README.md
src/catch_them_all_bringup/: CMakeLists.txt  package.xml
src/catch_them_all_bringup/launch/: catch_them_all_launch.py
src/catch_them_all_interfaces/: CMakeLists.txt  package.xml
src/turtle_controller/: CMakeLists.txt  package.xml
src/turtle_controller/include/turtle_controller/: turtle_controller_node.hpp
src/turtle_controller/src/: main.cpp  turtle_controller_node.cpp
src/turtle_spawner/: CMakeLists.txt  package.xml
src/turtle_spawner/include/turtle_spawner/: turtle_spawner_node.hpp
src/turtle_spawner/src/: main.cpp  turtle_spawner_node.cpp
