<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>catch_them_all_bringup</name>
  <version>0.0.0</version>
  <description>Catch Them All Application Bringup</description>
  <maintainer email="ak.alexander.kozhinov@gmail.com">nuke-ros</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>launch_ros</buildtool_depend>

  <exec_depend>turtlesim</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
